fix layout bugs, update flexibility log

--- a/src/index.css
+++ b/src/index.css
@@ -4,42 +4,15 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: auto;
+  overflow: hidden;
+  position: absolute;
+  top: 2em;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-.container {
-  display: grid;
-  grid-template-columns: 80% 20%;
-}
-
-.header-link {
-  margin-left: 20px;
-  margin-right: 20px;
-  font-size: 16px;
-  color: white;
-  font-weight: 600;
-}
-
-.header-link:hover {
-  text-decoration: underline;
-}
-#canvas {
-  width: 100%;
-  height: 91.5vh;
-}
-
-.properties {
-  border-left: 1px solid #ccc;
-  overflow: auto;
-}
-
-.properties:empty {
-  display: none;
-}
-
-.properties.djs-properties-panel {
-  padding-bottom: 70px;
-  min-height: 100%;
 }
